// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateGroupedBars() should calculate grouped bars correctly for horizontal layout 1`] = `
Array [
  Object {
    "color": "red",
    "height": 8,
    "key": "0.users",
    "selector": Array [
      0,
      "users",
    ],
    "value": 3,
    "width": 2.6785714285714306,
    "x": 26.785714285714285,
    "y": 75,
  },
  Object {
    "color": "red",
    "height": 8,
    "key": "1.users",
    "selector": Array [
      1,
      "users",
    ],
    "value": 19,
    "width": 16.964285714285715,
    "x": 26.785714285714285,
    "y": 50,
  },
  Object {
    "color": "red",
    "height": 8,
    "key": "2.users",
    "selector": Array [
      2,
      "users",
    ],
    "value": 20,
    "width": 17.85714285714286,
    "x": 26.785714285714285,
    "y": 25,
  },
  Object {
    "color": "red",
    "height": 8,
    "key": "3.users",
    "selector": Array [
      3,
      "users",
    ],
    "value": 63,
    "width": 56.25000000000001,
    "x": 26.785714285714285,
    "y": 0,
  },
  Object {
    "color": "green",
    "height": 8,
    "key": "0.licenses",
    "selector": Array [
      0,
      "licenses",
    ],
    "value": 52,
    "width": 46.42857142857142,
    "x": 26.785714285714285,
    "y": 83,
  },
  Object {
    "color": "green",
    "height": 8,
    "key": "1.licenses",
    "selector": Array [
      1,
      "licenses",
    ],
    "value": 82,
    "width": 73.21428571428572,
    "x": 26.785714285714285,
    "y": 58,
  },
  Object {
    "color": "green",
    "height": 8,
    "key": "2.licenses",
    "selector": Array [
      2,
      "licenses",
    ],
    "value": -15,
    "width": 13.392857142857142,
    "x": 13.392857142857142,
    "y": 33,
  },
  Object {
    "color": "green",
    "height": 8,
    "key": "3.licenses",
    "selector": Array [
      3,
      "licenses",
    ],
    "value": -15,
    "width": 13.392857142857142,
    "x": 13.392857142857142,
    "y": 8,
  },
  Object {
    "color": "blue",
    "height": 8,
    "key": "0.shops",
    "selector": Array [
      0,
      "shops",
    ],
    "value": 12,
    "width": 10.714285714285715,
    "x": 26.785714285714285,
    "y": 91,
  },
  Object {
    "color": "blue",
    "height": 8,
    "key": "1.shops",
    "selector": Array [
      1,
      "shops",
    ],
    "value": 15,
    "width": 13.392857142857146,
    "x": 26.785714285714285,
    "y": 66,
  },
  Object {
    "color": "blue",
    "height": 8,
    "key": "2.shops",
    "selector": Array [
      2,
      "shops",
    ],
    "value": 23,
    "width": 20.535714285714285,
    "x": 26.785714285714285,
    "y": 41,
  },
  Object {
    "color": "blue",
    "height": 8,
    "key": "3.shops",
    "selector": Array [
      3,
      "shops",
    ],
    "value": -30,
    "width": 26.785714285714285,
    "x": 0,
    "y": 16,
  },
]
`;

exports[`calculateGroupedBars() should calculate grouped bars correctly for vertical layout 1`] = `
Array [
  Object {
    "color": "red",
    "height": 2.6785714285714306,
    "key": "0.users",
    "selector": Array [
      0,
      "users",
    ],
    "value": 3,
    "width": 8,
    "x": 0,
    "y": 29.464285714285715,
  },
  Object {
    "color": "red",
    "height": 16.964285714285715,
    "key": "1.users",
    "selector": Array [
      1,
      "users",
    ],
    "value": 19,
    "width": 8,
    "x": 25,
    "y": 43.75,
  },
  Object {
    "color": "red",
    "height": 17.85714285714286,
    "key": "2.users",
    "selector": Array [
      2,
      "users",
    ],
    "value": 20,
    "width": 8,
    "x": 50,
    "y": 44.642857142857146,
  },
  Object {
    "color": "red",
    "height": 56.25000000000001,
    "key": "3.users",
    "selector": Array [
      3,
      "users",
    ],
    "value": 63,
    "width": 8,
    "x": 75,
    "y": 83.03571428571429,
  },
  Object {
    "color": "green",
    "height": 46.42857142857142,
    "key": "0.licenses",
    "selector": Array [
      0,
      "licenses",
    ],
    "value": 52,
    "width": 8,
    "x": 8,
    "y": 73.21428571428571,
  },
  Object {
    "color": "green",
    "height": 73.21428571428572,
    "key": "1.licenses",
    "selector": Array [
      1,
      "licenses",
    ],
    "value": 82,
    "width": 8,
    "x": 33,
    "y": 100,
  },
  Object {
    "color": "green",
    "height": 13.392857142857142,
    "key": "2.licenses",
    "selector": Array [
      2,
      "licenses",
    ],
    "value": -15,
    "width": 8,
    "x": 58,
    "y": 26.785714285714285,
  },
  Object {
    "color": "green",
    "height": 13.392857142857142,
    "key": "3.licenses",
    "selector": Array [
      3,
      "licenses",
    ],
    "value": -15,
    "width": 8,
    "x": 83,
    "y": 26.785714285714285,
  },
  Object {
    "color": "blue",
    "height": 10.714285714285715,
    "key": "0.shops",
    "selector": Array [
      0,
      "shops",
    ],
    "value": 12,
    "width": 8,
    "x": 16,
    "y": 37.5,
  },
  Object {
    "color": "blue",
    "height": 13.392857142857146,
    "key": "1.shops",
    "selector": Array [
      1,
      "shops",
    ],
    "value": 15,
    "width": 8,
    "x": 41,
    "y": 40.17857142857143,
  },
  Object {
    "color": "blue",
    "height": 20.535714285714285,
    "key": "2.shops",
    "selector": Array [
      2,
      "shops",
    ],
    "value": 23,
    "width": 8,
    "x": 66,
    "y": 47.32142857142857,
  },
  Object {
    "color": "blue",
    "height": 26.785714285714285,
    "key": "3.shops",
    "selector": Array [
      3,
      "shops",
    ],
    "value": -30,
    "width": 8,
    "x": 91,
    "y": 26.785714285714285,
  },
]
`;
